Plugin now works on Mac/Linux with Mono.